# bluebird

bluebird_vm/: Cargo.toml  hello.bb  my_plugin.rs
bluebird_vm/src/: example.rs  lib.rs  main.rs
bluebird_vm/src/core/: mod.rs  ops.rs  vm.rs
bluebird_vm_proc_macro/: Cargo.toml
bluebird_vm_proc_macro/src/: lib.rs
blurbird_vm_debugger/: Cargo.toml  program.bb
blurbird_vm_debugger/src/: lib.rs  main.rs  sample.rs
tree-sitter-bluebird-asm/: Cargo.toml  Makefile  Package.swift  binding.gyp  calculate.py  grammar.js  hello-new.bb  hello.bb  package.json  pyproject.toml  setup.py
tree-sitter-bluebird-asm/bindings/c/: tree-sitter-bluebird_asm.pc.in
tree-sitter-bluebird-asm/bindings/go/: binding.go  binding_test.go  go.mod
tree-sitter-bluebird-asm/bindings/node/: binding.cc
tree-sitter-bluebird-asm/bindings/python/tree_sitter_bluebird_asm/: __init__.py  binding.c
tree-sitter-bluebird-asm/bindings/rust/: build.rs  lib.rs
tree-sitter-bluebird-asm/bindings/swift/TreeSitterBluebirdAsm/: bluebird_asm.h
tree-sitter-bluebird-asm/src/: grammar.json  node-types.json  parser.c
