[package]
name = "bluebird_vm"
version = "0.1.0"
edition = "2021"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
path = "src/lib.rs"
crate-type = ["rlib"]
proc-macro = true

[dependencies]
tree-sitter = "0.22.6"
tree-sitter-bluebird-asm = {path = "../tree-sitter-bluebird-asm"}
bluebird_vm_proc_macro = {path = "../bluebird_vm_proc_macro"}